--- a/index.html
+++ b/index.html
@@ -2,18 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Hello World!</title>
+  <title>Yang Zhou's Homepage</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link rel="stylesheet" href="bluestyle.css">
 </head>
 <body>
 
-  <h1>Hello world!</h1>
-  <div><img src="img_hello_world.jpg" alt="Hello World from Space" style="width:100%;max-width:640px"></div>	
-  <p>This is the first file in my new Git Repo.</p>
-  <p>A new line in our file!</p>
-  <p>This is an emergency fix.</p>
-  <div><img src="img_hello_git.jpg" alt="Hello Git" style="width:100%;max-width:640px"><\div>
+  <h1>Welcome to Yang Zhou's homepage!</h1>
+  <p>The site is under construction.</p>
 
 </body>
 </html> 
